added support for setting the printer and checking if the printer is available
