# Photobox.LocalServer/Models/PrintingEnabledResultModel.cs
@@ -1,0 +1,6 @@
+﻿namespace Photobox.LocalServer.Models;
+
+public class PrintingEnabledResultModel
+{
+    public bool PrintingEnabled { get; set; }
+}
